--- a/channel-sender/rel/env.sh.eex
+++ b/channel-sender/rel/env.sh.eex
@@ -16,3 +16,6 @@
 # RELEASE_DISTRIBUTION variable below. Must be "sname", "name" or "none".
 # export RELEASE_DISTRIBUTION=name
 # export RELEASE_NODE=<%= @release.name %>@127.0.0.1
+
+if [ -z ${RELEASE_DISTRIBUTION+x} ]; then echo "RELEASE_DISTRIBUTION is unset"; else echo "RELEASE_DISTRIBUTION is set to '$RELEASE_DISTRIBUTION'"; fi
+if [ -z ${RELEASE_NODE+x} ]; then echo "RELEASE_NODE is unset"; else echo "RELEASE_NODE is set to '$RELEASE_NODE'"; fi
