--- a/examples/front-async-angular/src/styles.css
+++ b/examples/front-async-angular/src/styles.css
@@ -1,1 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* app.component.css */
+.log-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.console {
+    width: 100%;
+    height: 300px;
+    background-color: #222;
+    color: white;
+    padding: 10px;
+    font-family: Consolas, "Courier New", monospace;
+    overflow-y: auto;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    box-sizing: border-box;
+    border: 1px solid #444;
+}
+
+.console div {
+    padding: 5px 0;
+}
+
+.console .log {
+    color: #f1f1f1;
+}
+
+.console .warn {
+    color: #ffcc00;
+}
+
+.console .error {
+    color: #ff3333;
+}
+
+.console .info {
+    color: #66cc66;
+}
