--- a/examples/front-async-angular/src/app/components/requests/requests.component.html
+++ b/examples/front-async-angular/src/app/components/requests/requests.component.html
@@ -2,6 +2,7 @@
     <mat-card appearance="outlined">
         <mat-card-header>
             <mat-card-title>Captured Requests</mat-card-title>
+            <div class="indicator" [ngClass]="{'active': connected(), 'inactive': !connected()}"> </div>
         </mat-card-header>
         <mat-card-content>
             <div>
@@ -35,8 +36,11 @@
             </div>
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button><mat-icon>delete_forever</mat-icon>
+            <button mat-button (click)="cleanRequests()"><mat-icon>delete_forever</mat-icon>
                 Clear Requests</button>
+            <button mat-button (click)="copyToClipboard()">
+                <mat-icon>content_copy</mat-icon>Copy Requests
+            </button>
         </mat-card-actions>
     </mat-card>
 </div>
